--- a/index.html
+++ b/index.html
@@ -1,32 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="style.css" type="text/css">
-<title>Our menu</title>
+    <meta charset="utf-8">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <title>Module 2 Solution</title>
 </head>
 <body>
-<h1>Our menu</h1>
-
-<div class="row">
-  <div class="col-lg-3 col-md-6 col-sm-10">
-		<div class="title-box chicken"> Chicken</div>
-		<p id="text">So far, our programs have progressed from one command to another in a straightforward manner. In order for the program to branch to different execution paths based on e.g. user input, we need conditional statements.
-		</p>
-	</div>
-  <div class="col-lg-3 col-md-6 col-sm-10">
-		<div class="title-box beef">Beef</div>
-		<p id="text">So far, our programs have progressed from one command to another in a straightforward manner. In order for the program to branch to different execution paths based on e.g. user input, we need conditional statements.
-		</p>
-	</div>
-  <div class="col-lg-3 col-md-11 col-sm-10">
-		<div class="title-box sushi">Sushi</div>
-		<p id="text">So far, our programs have progressed from one command to another in a straightforward manner. In order for the program to branch to different execution paths based on e.g. user input, we need conditional statements.
-		</p>
-	</div>
-</div>
-
+    <h1>Our Menu</h1>
+    <div class="row">
+    <div class="container col-lg-4 col-md-6 col-sm-12">
+        <section>
+        <div id="chicken">
+            Chicken
+        </div>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. 
+        </p>
+        </section>
+    </div>
+    <div class="container col-lg-4 col-md-6 col-sm-12">
+        <section>
+        <div id="beef">
+            Beef
+        </div>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. 
+        </p>
+        </section>
+    </div>
+    <div class="container col-lg-4 col-md-12 col-sm-12">
+        <section>
+        <div id="sushi">
+            Sushi
+        </div>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. 
+        </p>
+        </section>
+    </div>
+    </div>
 </body>
 </html>
